--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,32 @@
 discord.py[voice]>=1.3.2
+aiohttp==3.6.2
+async-timeout==3.0.1
+attrs==19.3.0
+beautifulsoup4==4.9.0
+cachetools==4.0.0
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.1
+discord.py==1.3.3
+google-auth==1.13.1
+gspread==3.4.1
+gTTS==2.1.1
+gTTS-token==1.1.3
+httplib2==0.17.1
+idna==2.9
+multidict==4.7.5
+oauth2client==4.1.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyNaCl==1.3.0
+PyPDF2==1.26.0
+requests==2.23.0
+rsa==4.0
+schedule==0.6.0
+six==1.14.0
+soupsieve==2.0
+urllib3==1.25.8
+websockets==8.1
+yarl==1.4.2
